<?xml version="1.0"?>
<package format="3">
  <name>commonbluerovmsg</name>
  <description>basic utility</description>

  <version>1.0.0</version>
  <license>BSD</license>
  <author>Tim Hansen</author>
  <maintainer email="thansen@constructor.university">Tim Hansen</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
